@@ -1,6 +1,11 @@
-$Id: ChangeLog 4274 2016-04-02 15:41:26Z chrfranke $
+$Id: ChangeLog 4275 2016-04-02 18:59:52Z chrfranke $
 
 2016-04-02  Christian Franke  <franke@computer.org>
+
+	dev_interface.cpp, dev_interface.h: Add counter for objects derived
+	from 'smart_device'.
+	smartctl.cpp, smartd.cpp: Print error message if any objects remain
+	on exit.
 
 	os_linux.cpp: linux_megaraid_device: Remove unused member variable
 	'm_busnum' (clang++: -Wunused-private-field) and the related ctor
